--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,5 @@
 {
+  "exclude": "node_modules/**",
   "presets": ["@babel/preset-env"],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": ["@babel/plugin-proposal-object-rest-spread", "@babel/plugin-proposal-class-properties"]
 }
