--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "nimo-player-web",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "NiMO TV Player Web SDK",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "parcel example/index.html",
-    "build": "parcel build index.js",
+    "start": "serve",
+    "dev": "rollup --config --watch",
+    "build": "cross-env NODE_ENV=production rollup --config",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +15,17 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
-    "parcel-bundler": "^1.12.4"
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "cross-env": "^7.0.2",
+    "rollup": "^2.6.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-sourcemaps": "^0.5.0",
+    "rollup-plugin-uglify": "^6.0.4",
+    "serve": "^11.3.0"
+  },
+  "dependencies": {
+    "eventemitter3": "^4.0.0"
   }
 }
