--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-uglify": "^6.0.4",
-    "serve": "^11.3.2",
-    "elliptic": "^6.5.3"
+    "serve": "^11.3.2"
   },
   "dependencies": {
     "eventemitter3": "^4.0.0"
