--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "cross-env NODE_ENV=production rollup --config",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Huya PTE. LTD.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NiMO-TV/nimo-player-web.git"
+  },
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -22,7 +26,7 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-sourcemaps": "^0.5.0",
-    "rollup-plugin-uglify": "^6.0.4",
+    "rollup-plugin-terser": "^7.0.2",
     "serve": "^11.3.2"
   },
   "dependencies": {
